# PythonPackageCookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.directory_name}}/: .gitignore  CONTRIBUTING.md  makefile  pyproject.toml  setup.cfg
{{cookiecutter.directory_name}}/.github/workflows/: oncall_test.yml
{{cookiecutter.directory_name}}/licenses/: BSD-3  MIT
{{cookiecutter.directory_name}}/src/{{cookiecutter.package_name}}/: {{cookiecutter.file_name}}.py
{{cookiecutter.directory_name}}/tests/: test_{{cookiecutter.class_name}}.py
