[metadata]
name = {{cookiecutter.package_name}}
version = 0.1.0
description = {{cookiecutter.description}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}} 
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
license = {{cookiecutter.license}}
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >={{cookiecutter.minimum_python_version}}
install_requires =



[options.package_data]
* =
  *.yaml

[options.extras_require]
dev =
    pre-commit>=3.7.0
    ipykernel>=6.29.4
    ruff>=0.4.3
    gptrepo>=1.0.3
    pdoc>=12.3.1
    build
test =
    pytest>=8.2.0
    pytest-xdist>=3.6.1
    pytest-cov>=5.0.0
    nbmake>=1.5.3
    mypy>=1.10.0

[options.packages.find]
where = src